--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,11 +1,11 @@
-printWidth: 100
-proseWrap: always
+printWidth: 80
+proseWrap: "never"
 singleQuote: true
-semi: false
+semi: true
 arrowParens: "always"
 bracketSpacing: true
-parser: vue
-trailingComma: 'all'
+parser: "babylon"
+trailingComma: "all"
 overrides:
 - files:
   - '*.ts'
