--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "d3": "^5.7.0",
+    "element-ui": "^2.4.8",
+    "moment": "^2.22.2",
     "vue": "^2.5.17"
   },
   "devDependencies": {
